src/objects/MailAcceptance__c.object
<CustomObject>
    <fields>
        <fullName>Construction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>工事案件</label>
        <referenceTo>Construction__c</referenceTo>
        <relationshipLabel>受付メール</relationshipLabel>
        <relationshipName>MailAcceptance2Construction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>現場メンバー</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>受付メール</relationshipLabel>
        <relationshipName>MailAcceptance2Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>メール送信元</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>メール件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetJobNumber__c</fullName>
        <label>工事案件番号</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetJobStatus__c</fullName>
        <inlineHelpText>数字（１～５）
　１：見積提出
　２：受注
　３：施工着手
　４：施工完了
　５：請求書提出</inlineHelpText>
        <label>工事ステータス番号</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>受付メール</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Source__c</columns>
        <columns>Member__c</columns>
        <columns>Construction__c</columns>
        <columns>TargetJobNumber__c</columns>
        <columns>TargetJobStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>MA-{0000000}</displayFormat>
        <label>メール名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>